<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin">

        <ImageView
            android:id="@+id/iv_manga"
            android:layout_width="@dimen/manga_dimen"
            android:layout_height="@dimen/manga_dimen"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/gallery_placeholder"/>

        <!--Manga name-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manga_name"
            android:layout_marginTop="@dimen/base_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_manga_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="I wanna sell ..."
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:maxLines="1"
            android:ellipsize="middle"
            tools:text="Nartuo"/>

        <!--Author-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manga_author"
            android:layout_marginTop="@dimen/base_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_manga_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="The author is ..."
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:maxLines="1"
            android:ellipsize="middle"
            tools:text="Masashi Kishimoto"/>

        <!--Price-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manga_price"
            android:layout_marginTop="@dimen/base_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_manga_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="I wanna sell for ... "
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:maxLines="1"
            android:ellipsize="middle"
            tools:text="100k"/>

        <!--Description-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manga_description"
            android:layout_marginTop="@dimen/base_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_manga_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="The author is"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:minLines="3"
            android:ellipsize="end"
            tools:text="Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."/>

        <!--Condition-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manga_condition"
            android:layout_marginTop="@dimen/base_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/sp_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_condition">
        </Spinner>

        <Button
            android:id="@+id/btn_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sell"/>
    </LinearLayout>
</ScrollView>
